--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,15 @@ jobs:
       - name: Build application in production mode
         run: make prod
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Unit test compiled Javascript
+        run: |
+          npm install
+          npm test
+
       - name: Deploy built files to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
