--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,6 @@ on:
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       
@@ -58,6 +57,7 @@ jobs:
           publish_dir: ./build
 
   cypress_test:
+    needs: build_and_test
     runs-on: ubuntu-latest
 
     steps:
