--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "python -m http.server --directory build",
+    "start": "python -m http.server --directory build --bind 0.0.0.0",
     "test:watch": "mocha --watch",
     "cypress:open": "cypress open"
   },
