--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "python -m http.server --directory build --bind 0.0.0.0",
+    "start": "http-server ./build",
     "test:watch": "mocha --watch",
     "cypress:open": "cypress open"
   },
@@ -23,6 +23,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "cypress": "^9.2.0",
+    "http-server": "^14.0.0",
     "mocha": "^9.1.3"
   }
 }
