Revert "Try combining lua cache and build steps into one"
This reverts commit 0602e1733e4bd324f1431617f635e62d58c34742.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,13 @@ jobs:
           version: 2.0.34
           actions-cache-folder: 'emsdk-cache'
 
-      - name: Build Lua source code and cache it
+      - name: Cache Built Lua source code
         uses: actions/cache@v2
         with:
           key: ${{ runner.os }}-emscripten-lua-5.4.3
           path: ./code/libraries/lua-5.4.3
+
+      - name: Fetch and build Lua source code
         run: make libraries
 
       - name: Build application in production mode
